--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kino-project",
+  "name": "react-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -26,3 +27,4 @@
     "vite": "^5.4.10"
   }
 }
+
